--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
+
   <body>
-    Learn to code by watching others See how experienced developers solve
-    problems in real-time. Watching scripted tutorials is great, but
-    understanding how developers think is invaluable. Try it free 7 days then
-    $20/mo. thereafter First Name Last Name Email Address Password Claim your
-    free trial By clicking the button, you are agreeing to our Terms and
-    Services
-  </body>
+    <div class="main-layout">
+      <div class="intro">
+        <h1 class="form-title">Learn to code by watching others</h1>
+        <p class="description">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+      </div>
+  
+      <div class="offer">Try it free 7 days <span> then $20/mo. thereafter</span></div>
+      <div class="container">
+        <form id="signupForm">
+          <input type="text" id="firstName" placeholder="First Name" />
+          <p class="error-message" id="firstNameError"></p>
+  
+          <input type="text" id="lastName" placeholder="Last Name" />
+          <p class="error-message" id="lastNameError"></p>
+  
+          <input type="email" id="email" placeholder="Email Address" />
+          <p class="error-message" id="emailError"></p>
+  
+          <input type="password" id="password" placeholder="Password" />
+          <p class="error-message" id="passwordError"></p>
+  
+          <button type="submit">CLAIM YOUR FREE TRIAL</button>
+        </form>
+        <p class="terms">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
+      </div>
+    </div>
 </html>
