--- a/index.html
+++ b/index.html
@@ -19,27 +19,41 @@
     <div class="main-layout">
       <div class="intro">
         <h1 class="form-title">Learn to code by watching others</h1>
-        <p class="description">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+        <p class="description">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
       </div>
-  
-      <div class="offer">Try it free 7 days <span> then $20/mo. thereafter</span></div>
-      <div class="container">
-        <form id="signupForm">
-          <input type="text" id="firstName" placeholder="First Name" />
-          <p class="error-message" id="firstNameError"></p>
-  
-          <input type="text" id="lastName" placeholder="Last Name" />
-          <p class="error-message" id="lastNameError"></p>
-  
-          <input type="email" id="email" placeholder="Email Address" />
-          <p class="error-message" id="emailError"></p>
-  
-          <input type="password" id="password" placeholder="Password" />
-          <p class="error-message" id="passwordError"></p>
-  
-          <button type="submit">CLAIM YOUR FREE TRIAL</button>
-        </form>
-        <p class="terms">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
+
+      <div class="form-section">
+        <div class="offer">
+          Try it free 7 days <span> then $20/mo. thereafter</span>
+        </div>
+        <div class="container">
+          <form id="signupForm">
+            <input type="text" id="firstName" placeholder="First Name" />
+            <p class="error-message" id="firstNameError"></p>
+
+            <input type="text" id="lastName" placeholder="Last Name" />
+            <p class="error-message" id="lastNameError"></p>
+
+            <input type="email" id="email" placeholder="Email Address" />
+            <p class="error-message" id="emailError"></p>
+
+            <input type="password" id="password" placeholder="Password" />
+            <p class="error-message" id="passwordError"></p>
+
+            <button type="submit">CLAIM YOUR FREE TRIAL</button>
+          </form>
+          <p class="terms">
+            By clicking the button, you are agreeing to our
+            <span>Terms and Services</span>
+          </p>
+        </div>
       </div>
     </div>
+
+    <script src="form.js"></script>
+  </body>
 </html>
