--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="offer">
           Try it free 7 days <span> then $20/mo. thereafter</span>
         </div>
-        <div class="container">
+        <div class="container" novalidate>
           <form id="signupForm">
             <input type="text" id="firstName" placeholder="First Name" />
             <p class="error-message" id="firstNameError"></p>
@@ -38,7 +38,7 @@
             <input type="text" id="lastName" placeholder="Last Name" />
             <p class="error-message" id="lastNameError"></p>
 
-            <input type="email" id="email" placeholder="Email Address" />
+            <input type="text" id="email" placeholder="Email Address" />
             <p class="error-message" id="emailError"></p>
 
             <input type="password" id="password" placeholder="Password" />
